--- a/index2.html
+++ b/index2.html
@@ -13,26 +13,27 @@
 
     <h1 aria-label="Sarah Fossheim">
       <span aria-hidden="true">
-        <span style="--index: 1s">I</span>
+        <span style="--index: 1s">T</span>
+          
       </span>  
         <span aria-hidden="true" class="spacing"  style="--index: 1.1"></span>
       <span aria-hidden="true">
-        <span style="--index: 1.2s">L</span>
-        <span style="--index: 1.3s">O</span>
-        <span style="--index: 1.4s">V</span>
-        <span style="--index: 1.5s">E</span>
+        <span style="--index: 1.2s">C</span>
+        <span style="--index: 1.3s">Ũ</span>
+        <span style="--index: 1.4s">N</span>
+        <span style="--index: 1.5s">G</span>
       </span>  
         <span aria-hidden="true" class="spacing"  style="--index: 1.6"></span>
       <span aria-hidden="true">
         <span style="--index: 1.7s">Y</span>
-        <span style="--index: 1.8s">O</span>
+        <span style="--index: 1.8s">Ê</span>
         <span style="--index: 1.9s">U</span>
       </span>  
         <span aria-hidden="true" class="spacing"  style="--index: 2"> </span>
       <span aria-hidden="true">
         <span style="--index: 2.1s">T</span>
-        <span style="--index: 2.2s">O</span>
-        <span style="--index: 2.3s">O</span>
+        <span style="--index: 2.2s">H</span>
+        <span style="--index: 2.3s">Ư</span>
       </span>
 
       <audio src="music.mp3" autoplay controls hidden>
