--- a/index2.html
+++ b/index2.html
@@ -31,9 +31,10 @@
       </span>  
         <span aria-hidden="true" class="spacing"  style="--index: 2"> </span>
       <span aria-hidden="true">
-        <span style="--index: 2.1s">T</span>
-        <span style="--index: 2.2s">H</span>
-        <span style="--index: 2.3s">Ư</span>
+        <span style="--index: 2.1s">Đ</span>
+        <span style="--index: 2.2s">L</span>
+        <span style="--index: 2.3s">P/span>
+        <span style="--index: 2.4s">T/span>
       </span>
 
       <audio src="music.mp3" autoplay controls hidden>
